# stem_wire

./: .gitmodules  Cargo.toml  LICENSE  README.md  README.template.md  build.rs
docs/: links.md  main.md
src/: cast.rs  error.rs  lib.rs  rectangular.rs  resistance.rs  round.rs  sff.rs  stranded.rs  wire.rs
tests/: serde.rs  wire_round.rs  wire_stranded.rs
